initial census ethnicity data cleaned

--- a/Data_Census_OPTN.ipynb
+++ b/Data_Census_OPTN.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f6de423f",
+   "id": "5369b72c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "46e4418b",
+   "execution_count": 82,
+   "id": "80f37f5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "47f66707",
+   "execution_count": 83,
+   "id": "2644a51a",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "[5 rows x 105 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,8 +278,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "326462ed",
+   "execution_count": 84,
+   "id": "c7eb3c9d",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,8 +511,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "460d7c09",
+   "execution_count": 85,
+   "id": "6e9ca19a",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,8 +545,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "85e521d5",
+   "execution_count": 92,
+   "id": "4269b37b",
    "metadata": {},
    "outputs": [
     {
@@ -1731,19 +1731,20 @@
        "[40 rows x 53 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#newly renamed column names\n",
     "census_age_df_drop.head(40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "7459a7e4",
+   "execution_count": 87,
+   "id": "bc157bdb",
    "metadata": {},
    "outputs": [
     {
@@ -2368,7 +2369,7 @@
        "[20 rows x 53 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2382,8 +2383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "389612f8",
+   "execution_count": 88,
+   "id": "ff3da4f3",
    "metadata": {},
    "outputs": [
     {
@@ -3064,7 +3065,7 @@
        "[22 rows x 53 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3080,8 +3081,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "53e5cba9",
+   "execution_count": 89,
+   "id": "cc77fd21",
    "metadata": {},
    "outputs": [
     {
@@ -3370,7 +3371,7 @@
        "[8 rows x 53 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3383,8 +3384,454 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "id": "1cf96301",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ethnicity</th>\n",
+       "      <th>United States</th>\n",
+       "      <th>Alabama</th>\n",
+       "      <th>Alaska</th>\n",
+       "      <th>Arizona</th>\n",
+       "      <th>Arkansas</th>\n",
+       "      <th>California</th>\n",
+       "      <th>Colorado</th>\n",
+       "      <th>Connecticut</th>\n",
+       "      <th>Delaware</th>\n",
+       "      <th>...</th>\n",
+       "      <th>South Dakota</th>\n",
+       "      <th>Tennessee</th>\n",
+       "      <th>Texas</th>\n",
+       "      <th>Utah</th>\n",
+       "      <th>Vermont</th>\n",
+       "      <th>Virginia</th>\n",
+       "      <th>Washington</th>\n",
+       "      <th>West Virginia</th>\n",
+       "      <th>Wisconsin</th>\n",
+       "      <th>Puerto Rico</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>White; American Indian and Ala...</td>\n",
+       "      <td>244</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>Black or African American; Ame...</td>\n",
+       "      <td>227</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Population of six races:</td>\n",
+       "      <td>1,004</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>18</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>58</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>26</td>\n",
+       "      <td>29</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>White; Black or African Americ...</td>\n",
+       "      <td>1,004</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>18</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>58</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>26</td>\n",
+       "      <td>29</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Total Multiracial</td>\n",
+       "      <td>13,548,983</td>\n",
+       "      <td>184,618</td>\n",
+       "      <td>71,761</td>\n",
+       "      <td>266,840</td>\n",
+       "      <td>147,157</td>\n",
+       "      <td>1,627,722</td>\n",
+       "      <td>260,798</td>\n",
+       "      <td>137,569</td>\n",
+       "      <td>43,023</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34,432</td>\n",
+       "      <td>270,223</td>\n",
+       "      <td>886,095</td>\n",
+       "      <td>120,452</td>\n",
+       "      <td>29,549</td>\n",
+       "      <td>404,910</td>\n",
+       "      <td>511,114</td>\n",
+       "      <td>72,135</td>\n",
+       "      <td>203,746</td>\n",
+       "      <td>2,340</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 53 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            Ethnicity United States  Alabama  \\\n",
+       "69                  White; American Indian and Ala...           244        2   \n",
+       "70                  Black or African American; Ame...           227        2   \n",
+       "71                           Population of six races:         1,004        2   \n",
+       "72                  White; Black or African Americ...         1,004        2   \n",
+       "73                                  Total Multiracial    13,548,983  184,618   \n",
+       "\n",
+       "    Alaska  Arizona Arkansas California Colorado Connecticut Delaware  ...  \\\n",
+       "69      12        0        2         21        1           0        0  ...   \n",
+       "70       2        4        0          1        0           1        0  ...   \n",
+       "71       6        9        1        130       18          11        5  ...   \n",
+       "72       6        9        1        130       18          11        5  ...   \n",
+       "73  71,761  266,840  147,157  1,627,722  260,798     137,569   43,023  ...   \n",
+       "\n",
+       "   South Dakota Tennessee    Texas     Utah Vermont Virginia Washington  \\\n",
+       "69            4         0       16        3       0        8         12   \n",
+       "70            0         0        6        5       2        7         12   \n",
+       "71            1        10       58        3       6       26         29   \n",
+       "72            1        10       58        3       6       26         29   \n",
+       "73       34,432   270,223  886,095  120,452  29,549  404,910    511,114   \n",
+       "\n",
+       "   West Virginia Wisconsin Puerto Rico  \n",
+       "69             0         2           2  \n",
+       "70             1         1           1  \n",
+       "71            11         0           0  \n",
+       "72            11         0           0  \n",
+       "73        72,135   203,746       2,340  \n",
+       "\n",
+       "[5 rows x 53 columns]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "census_eth_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "c0884b9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ethnicities</th>\n",
+       "      <th>United States</th>\n",
+       "      <th>Alabama</th>\n",
+       "      <th>Alaska</th>\n",
+       "      <th>Arizona</th>\n",
+       "      <th>Arkansas</th>\n",
+       "      <th>California</th>\n",
+       "      <th>Colorado</th>\n",
+       "      <th>Connecticut</th>\n",
+       "      <th>Delaware</th>\n",
+       "      <th>...</th>\n",
+       "      <th>South Dakota</th>\n",
+       "      <th>Tennessee</th>\n",
+       "      <th>Texas</th>\n",
+       "      <th>Utah</th>\n",
+       "      <th>Vermont</th>\n",
+       "      <th>Virginia</th>\n",
+       "      <th>Washington</th>\n",
+       "      <th>West Virginia</th>\n",
+       "      <th>Wisconsin</th>\n",
+       "      <th>Puerto Rico</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Total:</td>\n",
+       "      <td>331,449,281</td>\n",
+       "      <td>5,024,279</td>\n",
+       "      <td>733,391</td>\n",
+       "      <td>7,151,502</td>\n",
+       "      <td>3,011,524</td>\n",
+       "      <td>39,538,223</td>\n",
+       "      <td>5,773,714</td>\n",
+       "      <td>3,605,944</td>\n",
+       "      <td>989,948</td>\n",
+       "      <td>...</td>\n",
+       "      <td>886,667</td>\n",
+       "      <td>6,910,840</td>\n",
+       "      <td>29,145,505</td>\n",
+       "      <td>3,271,616</td>\n",
+       "      <td>643,077</td>\n",
+       "      <td>8,631,393</td>\n",
+       "      <td>7,705,281</td>\n",
+       "      <td>1,793,716</td>\n",
+       "      <td>5,893,718</td>\n",
+       "      <td>3,285,874</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hispanic or Latino</td>\n",
+       "      <td>62,080,044</td>\n",
+       "      <td>264,047</td>\n",
+       "      <td>49,824</td>\n",
+       "      <td>2,192,253</td>\n",
+       "      <td>256,847</td>\n",
+       "      <td>15,579,652</td>\n",
+       "      <td>1,263,390</td>\n",
+       "      <td>623,293</td>\n",
+       "      <td>104,290</td>\n",
+       "      <td>...</td>\n",
+       "      <td>38,741</td>\n",
+       "      <td>479,187</td>\n",
+       "      <td>11,441,717</td>\n",
+       "      <td>492,912</td>\n",
+       "      <td>15,504</td>\n",
+       "      <td>908,749</td>\n",
+       "      <td>1,059,213</td>\n",
+       "      <td>34,827</td>\n",
+       "      <td>447,290</td>\n",
+       "      <td>3,249,043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Not Hispanic or Latino:</td>\n",
+       "      <td>269,369,237</td>\n",
+       "      <td>4,760,232</td>\n",
+       "      <td>683,567</td>\n",
+       "      <td>4,959,249</td>\n",
+       "      <td>2,754,677</td>\n",
+       "      <td>23,958,571</td>\n",
+       "      <td>4,510,324</td>\n",
+       "      <td>2,982,651</td>\n",
+       "      <td>885,658</td>\n",
+       "      <td>...</td>\n",
+       "      <td>847,926</td>\n",
+       "      <td>6,431,653</td>\n",
+       "      <td>17,703,788</td>\n",
+       "      <td>2,778,704</td>\n",
+       "      <td>627,573</td>\n",
+       "      <td>7,722,644</td>\n",
+       "      <td>6,646,068</td>\n",
+       "      <td>1,758,889</td>\n",
+       "      <td>5,446,428</td>\n",
+       "      <td>36,831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Population of one race:</td>\n",
+       "      <td>255,820,254</td>\n",
+       "      <td>4,575,614</td>\n",
+       "      <td>611,806</td>\n",
+       "      <td>4,692,409</td>\n",
+       "      <td>2,607,520</td>\n",
+       "      <td>22,330,849</td>\n",
+       "      <td>4,249,526</td>\n",
+       "      <td>2,845,082</td>\n",
+       "      <td>842,635</td>\n",
+       "      <td>...</td>\n",
+       "      <td>813,494</td>\n",
+       "      <td>6,161,430</td>\n",
+       "      <td>16,817,693</td>\n",
+       "      <td>2,658,252</td>\n",
+       "      <td>598,024</td>\n",
+       "      <td>7,317,734</td>\n",
+       "      <td>6,134,954</td>\n",
+       "      <td>1,686,754</td>\n",
+       "      <td>5,242,682</td>\n",
+       "      <td>34,491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>White alone</td>\n",
+       "      <td>191,697,647</td>\n",
+       "      <td>3,171,351</td>\n",
+       "      <td>421,758</td>\n",
+       "      <td>3,816,547</td>\n",
+       "      <td>2,063,550</td>\n",
+       "      <td>13,714,587</td>\n",
+       "      <td>3,760,663</td>\n",
+       "      <td>2,279,232</td>\n",
+       "      <td>579,851</td>\n",
+       "      <td>...</td>\n",
+       "      <td>705,583</td>\n",
+       "      <td>4,900,246</td>\n",
+       "      <td>11,584,597</td>\n",
+       "      <td>2,465,355</td>\n",
+       "      <td>573,201</td>\n",
+       "      <td>5,058,363</td>\n",
+       "      <td>4,918,820</td>\n",
+       "      <td>1,598,834</td>\n",
+       "      <td>4,634,018</td>\n",
+       "      <td>24,548</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 53 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Ethnicities United States    Alabama   Alaska  \\\n",
+       "0                           Total:   331,449,281  5,024,279  733,391   \n",
+       "1               Hispanic or Latino    62,080,044    264,047   49,824   \n",
+       "2          Not Hispanic or Latino:   269,369,237  4,760,232  683,567   \n",
+       "3          Population of one race:   255,820,254  4,575,614  611,806   \n",
+       "4                      White alone   191,697,647  3,171,351  421,758   \n",
+       "\n",
+       "     Arizona   Arkansas  California   Colorado Connecticut Delaware  ...  \\\n",
+       "0  7,151,502  3,011,524  39,538,223  5,773,714   3,605,944  989,948  ...   \n",
+       "1  2,192,253    256,847  15,579,652  1,263,390     623,293  104,290  ...   \n",
+       "2  4,959,249  2,754,677  23,958,571  4,510,324   2,982,651  885,658  ...   \n",
+       "3  4,692,409  2,607,520  22,330,849  4,249,526   2,845,082  842,635  ...   \n",
+       "4  3,816,547  2,063,550  13,714,587  3,760,663   2,279,232  579,851  ...   \n",
+       "\n",
+       "  South Dakota  Tennessee       Texas       Utah  Vermont   Virginia  \\\n",
+       "0      886,667  6,910,840  29,145,505  3,271,616  643,077  8,631,393   \n",
+       "1       38,741    479,187  11,441,717    492,912   15,504    908,749   \n",
+       "2      847,926  6,431,653  17,703,788  2,778,704  627,573  7,722,644   \n",
+       "3      813,494  6,161,430  16,817,693  2,658,252  598,024  7,317,734   \n",
+       "4      705,583  4,900,246  11,584,597  2,465,355  573,201  5,058,363   \n",
+       "\n",
+       "  Washington West Virginia  Wisconsin Puerto Rico  \n",
+       "0  7,705,281     1,793,716  5,893,718   3,285,874  \n",
+       "1  1,059,213        34,827    447,290   3,249,043  \n",
+       "2  6,646,068     1,758,889  5,446,428      36,831  \n",
+       "3  6,134,954     1,686,754  5,242,682      34,491  \n",
+       "4  4,918,820     1,598,834  4,634,018      24,548  \n",
+       "\n",
+       "[5 rows x 53 columns]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#rename the \"Label (Grouping)\" column\n",
+    "census_eth_df = census_eth_df.rename(columns={'Label (Grouping)': 'Ethnicities'})\n",
+    "census_eth_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82b1d2e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#start here. Start getting rid of rows not needed."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
-   "id": "ff0ed701",
+   "id": "0b6ae2e1",
    "metadata": {},
    "outputs": [
     {
@@ -3601,7 +4048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04b2bd12",
+   "id": "2df833f8",
    "metadata": {},
    "outputs": [],
    "source": []
