--- a/Data_Census_OPTN.ipynb
+++ b/Data_Census_OPTN.ipynb
@@ -2053,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "793f86f9",
+   "id": "6b48bef2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2832,7 +2832,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "98a964f0",
+   "id": "baecace0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5914,7 +5914,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "e0cf1d39",
+   "id": "f8154152",
    "metadata": {},
    "outputs": [
     {
@@ -5939,7 +5939,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "44c0fe33",
+   "id": "b3df7c33",
    "metadata": {},
    "outputs": [
     {
@@ -5963,7 +5963,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "61835c8c",
+   "id": "a9397862",
    "metadata": {},
    "outputs": [
     {
@@ -6355,7 +6355,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "ceab737b",
+   "id": "278303d5",
    "metadata": {},
    "outputs": [
     {
@@ -6744,8 +6744,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "8d711503",
+   "execution_count": 139,
+   "id": "64186713",
    "metadata": {},
    "outputs": [
     {
@@ -7118,7 +7118,7 @@
        "[359 rows x 55 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7132,21 +7132,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "4f95bec8",
+   "execution_count": 141,
+   "id": "403162fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "optn_remove_agg = optn_all_ethn_drop_wait.drop('All Patient States', axis=1)\n",
     "optn_remove_agg\n",
-    "#now the above dataframe is cleaned of all aggregate data\n",
-    "optn_remove_agg.to_csv('output/optn_remove_agg.csv')"
+    "#remove spaces from state names\n",
+    "optn_remove_space = optn_remove_agg.rename(columns={'New Hampshire': 'New_Hampshire', 'New Jersey': 'New_Jersey',\n",
+    "                                                   'New Mexico': 'New_Mexico', 'New York': 'New_York',\n",
+    "                                                   'North Carolina': 'North_Carolina', 'North Dakota': 'North_Dakota',\n",
+    "                                                   'Rhode Island': 'Rhode_Island', 'South Carolina': 'South_Carolina',\n",
+    "                                                   'South Dakota': 'South_Dakota', 'West Virginia': 'West_Virginia'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "414c3b32",
+   "execution_count": 142,
+   "id": "26444865",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'Ethnicities', 'Wait Time', 'Alabama', 'Alaska', 'Arizona',\n",
+       "       'Arkansas', 'California', 'Colorado', 'Connecticut', 'Delaware',\n",
+       "       'District of Columbia', 'Florida', 'Georgia', 'Hawaii', 'Idaho',\n",
+       "       'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',\n",
+       "       'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',\n",
+       "       'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada',\n",
+       "       'New_Hampshire', 'New_Jersey', 'New_Mexico', 'New_York',\n",
+       "       'North_Carolina', 'North_Dakota', 'Ohio', 'Oklahoma', 'Oregon',\n",
+       "       'Pennsylvania', 'Rhode_Island', 'South_Carolina', 'South_Dakota',\n",
+       "       'Tennessee', 'Texas', 'Utah', 'Vermont', 'Virginia', 'Washington',\n",
+       "       'West_Virginia', 'Wisconsin', 'Wyoming'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "optn_remove_space.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "a1e12c4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#now the above dataframe is cleaned of all aggregate data\n",
+    "optn_remove_space.to_csv('output/optn_remove_agg.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "7d8ae100",
    "metadata": {},
    "outputs": [
     {
@@ -7155,7 +7202,7 @@
        "Index(['Ethnicities', 'All Patient States', 'Wait Time'], dtype='object')"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7168,8 +7215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "79e1bf86",
+   "execution_count": 145,
+   "id": "668624d0",
    "metadata": {},
    "outputs": [
     {
@@ -7300,7 +7347,7 @@
        "[543 rows x 3 columns]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7312,8 +7359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "155ee58b",
+   "execution_count": 146,
+   "id": "234063d8",
    "metadata": {},
    "outputs": [
     {
@@ -7417,7 +7464,7 @@
        "63  All Time  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7431,7 +7478,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "71a58f7b",
+   "id": "76110a6d",
    "metadata": {},
    "outputs": [
     {
@@ -7457,7 +7504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b560e336",
+   "id": "165d7759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7467,7 +7514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c8285e6",
+   "id": "839ad732",
    "metadata": {},
    "outputs": [],
    "source": [
