added final tables to database

--- a/Data_Census_OPTN.ipynb
+++ b/Data_Census_OPTN.ipynb
@@ -2053,7 +2053,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "6b48bef2",
+   "id": "498bf8db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2832,7 +2832,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "baecace0",
+   "id": "80ce88f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5914,7 +5914,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "f8154152",
+   "id": "f78accbd",
    "metadata": {},
    "outputs": [
     {
@@ -5939,7 +5939,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "b3df7c33",
+   "id": "fd2a8d71",
    "metadata": {},
    "outputs": [
     {
@@ -5963,7 +5963,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "a9397862",
+   "id": "f25be2ee",
    "metadata": {},
    "outputs": [
     {
@@ -6355,7 +6355,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "278303d5",
+   "id": "a123101a",
    "metadata": {},
    "outputs": [
     {
@@ -6737,7 +6737,7 @@
     "#create a mask with the values to be removed\n",
     "optn_all_age_drop_mask = optn_all_age_drop['Ethnicities'] != 'All Ethnicities'\n",
     "\n",
-    "#apply the mask to the dataframe and create a new one\n",
+    "#apply the mask to the dataframe and create a new dataframe\n",
     "optn_all_ethn_drop = optn_all_age_drop[optn_all_age_drop_mask]\n",
     "optn_all_ethn_drop"
    ]
@@ -6745,7 +6745,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "64186713",
+   "id": "11c85b74",
    "metadata": {},
    "outputs": [
     {
@@ -7133,7 +7133,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "403162fc",
+   "id": "eb5e1b3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7150,7 +7150,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "26444865",
+   "id": "42aa7f53",
    "metadata": {},
    "outputs": [
     {
@@ -7182,7 +7182,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "a1e12c4b",
+   "id": "a89e6c08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7193,7 +7193,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "7d8ae100",
+   "id": "c6ce8f8e",
    "metadata": {},
    "outputs": [
     {
@@ -7216,7 +7216,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "668624d0",
+   "id": "109039cb",
    "metadata": {},
    "outputs": [
     {
@@ -7360,7 +7360,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "234063d8",
+   "id": "2047dcc8",
    "metadata": {},
    "outputs": [
     {
@@ -7478,7 +7478,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "76110a6d",
+   "id": "06883420",
    "metadata": {},
    "outputs": [
     {
@@ -7504,7 +7504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "165d7759",
+   "id": "34bc30aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7514,7 +7514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839ad732",
+   "id": "6307b0ba",
    "metadata": {},
    "outputs": [],
    "source": [
