--- a/Cleaned_Data_OPTN_Census.ipynb
+++ b/Cleaned_Data_OPTN_Census.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "5819e035",
+   "id": "50683aca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "2d868712",
+   "id": "9f2b7a5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "7dfb4aa2",
+   "id": "98141908",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "5262bfd3",
+   "id": "dfd54c85",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "0ca44f6f",
+   "id": "0acb7bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "1093a89d",
+   "id": "4ce12a40",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "a681fab0",
+   "id": "e4dcf71d",
    "metadata": {},
    "outputs": [
     {
@@ -570,22 +570,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "341f11ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #Arkansas\n",
-    "# col_alaska = optn_df.columns[6]\n",
-    "# arizona_df = pd.DataFrame(optn_df[['Arizona', 'Age', 'Ethnicities', 'Wait Time']])\n",
-    "# arizona_df = alabama_df.rename(columns={'Arizona': 'People'})\n",
-    "# arizona_df['State'] = 'Arizona'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 140,
-   "id": "24a77555",
+   "id": "367c0164",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "bfd7c7ed",
+   "id": "9ecc8a36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "9ffdef8d",
+   "id": "7691594e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "44f65cb8",
+   "id": "49143e7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "3b090f12",
+   "id": "aabd93b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "353670d6",
+   "id": "82ad57f3",
    "metadata": {},
    "outputs": [
     {
@@ -1153,8 +1139,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "051cedbe",
+   "execution_count": 156,
+   "id": "c6eaf745",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = sqlite3.connect('optn_census.db')\n",
+    "c = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "9ea82035",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "database_path = Path(\"optn_census.db\")\n",
+    "engine = create_engine(f\"sqlite:///{database_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "07a7ac85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census_age = pd.read_csv('output/census_age_final.csv')\n",
+    "census_ethn = pd.read_csv('output/census_eth_df_drop.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "ce88a5d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "census_age = census_age.drop('Unnamed: 0', axis=1)\n",
+    "census_ethn = census_ethn.drop('Unnamed: 0', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "2aaa8886",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kathleen/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/pandas/core/generic.py:2882: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
+      "  method=method,\n"
+     ]
+    }
+   ],
+   "source": [
+    "census_ethn.to_sql('census_ethnicities', conn, if_exists='append', index = False)\n",
+    "census_age.to_sql('census_ages', conn, if_exists='append', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "d8040fa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('All Ages', '202,981,791', '3,281,881', '435,004', '4,241,669', '2,115,847', '15,443,776', '4,101,383', '2,354,580', '609,759', '253,842', '12,210,739', '5,602,328', '319,677', '1,548,085', '7,770,962', '5,308,520', '2,696,700', '2,230,826', '3,756,439', '2,675,200', '1,241,485', '3,018,844', '4,832,195', '7,438,013', '4,436,857', '1,654,011', '4,775,960', '939,189', '1,540,520', '1,560,010', '1,221,431', '5,062,888', '955,024', '11,022,836', '6,587,453', '644,265', '9,110,505', '2,617,058', '3,169,447', '9,704,692', '775,695', '3,301,055', '722,723', '5,097,360', '14,129,750', '2,647,741', '588,142', '5,251,112', '5,139,448', '1,617,386', '4,732,002', '914,840')\n",
+      "('0-5 years', '11,769,004', '197,779', '27,038', '228,891', '130,752', '831,944', '229,927', '111,684', '30,900', '14,057', '604,141', '326,871', '14,132', '107,222', '452,866', '344,147', '174,642', '145,484', '242,016', '166,683', '64,255', '166,684', '236,122', '430,667', '270,594', '102,101', '298,675', '54,986', '103,558', '77,991', '60,876', '282,695', '49,994', '626,798', '363,157', '45,196', '558,533', '159,162', '162,998', '529,055', '35,794', '184,087', '48,789', '308,798', '946,327', '213,595', '29,312', '305,129', '281,544', '94,398', '265,397', '39,408')\n",
+      "('6-10 Years', '10,669,038', '177,870', '23,884', '206,082', '118,845', '729,665', '210,661', '106,814', '28,179', '8,222', '540,789', '303,529', '14,602', '103,614', '418,881', '304,660', '157,500', '133,599', '217,209', '150,818', '58,202', '151,895', '217,027', '390,524', '242,764', '90,998', '266,036', '53,527', '93,475', '75,644', '56,697', '252,876', '49,510', '545,180', '329,463', '39,066', '497,987', '146,434', '155,552', '478,527', '32,692', '170,306', '44,056', '276,909', '872,207', '203,631', '27,243', '277,228', '260,489', '86,936', '241,529', '43,037')\n",
+      "('11-17 years', '16,133,285', '275,728', '35,193', '302,054', '184,544', '1,128,772', '320,437', '170,841', '41,492', '7,994', '825,851', '480,531', '16,070', '150,017', '611,087', '467,700', '234,187', '195,570', '328,331', '227,142', '90,822', '230,855', '343,449', '601,348', '364,579', '146,711', '401,514', '74,576', '138,555', '111,335', '91,795', '406,259', '65,144', '824,290', '508,232', '55,418', '751,264', '221,896', '236,089', '736,153', '50,549', '255,362', '62,638', '408,798', '1,260,314', '298,610', '44,216', '409,478', '382,563', '132,339', '380,689', '70,853')\n",
+      "('18-34 years', '42,535,959', '670,933', '98,926', '853,839', '432,699', '3,257,084', '969,852', '468,973', '115,411', '98,599', '2,219,668', '1,197,019', '72,616', '326,105', '1,599,517', '1,149,295', '570,293', '480,766', '797,344', '552,370', '241,650', '614,697', '1,070,311', '1,560,545', '899,011', '334,413', '1,007,756', '198,560', '328,205', '300,387', '256,395', '977,468', '186,593', '2,351,277', '1,392,426', '153,975', '1,915,824', '553,333', '661,049', '1,972,713', '171,930', '671,566', '149,333', '1,090,346', '3,124,655', '664,788', '127,093', '1,132,988', '1,103,410', '318,923', '969,954', '193,696')\n",
+      "('35-49 years', '37,798,436', '610,041', '88,856', '741,378', '393,296', '2,957,281', '838,033', '415,989', '103,269', '63,038', '2,043,902', '1,066,323', '62,182', '289,335', '1,481,515', '987,937', '491,332', '408,508', '711,855', '514,572', '225,752', '565,389', '872,163', '1,343,256', '849,999', '308,389', '896,353', '173,597', '286,990', '301,547', '220,647', '906,349', '169,704', '1,996,032', '1,235,665', '117,071', '1,678,781', '498,043', '630,297', '1,761,943', '137,692', '603,290', '128,961', '968,385', '2,729,598', '513,117', '105,858', '1,009,276', '1,023,798', '302,697', '875,703', '169,275')\n",
+      "('50-64 years', '41,808,289', '679,220', '88,931', '846,156', '418,528', '3,211,518', '796,997', '545,008', '133,642', '32,387', '2,586,285', '1,156,617', '63,202', '284,277', '1,631,429', '1,065,912', '530,855', '432,100', '760,874', '539,310', '277,299', '655,564', '1,065,229', '1,581,543', '928,351', '332,246', '965,544', '184,653', '294,412', '334,416', '280,588', '1,133,159', '189,050', '2,314,850', '1,386,885', '115,437', '1,889,764', '514,859', '626,825', '2,082,349', '173,995', '687,139', '142,902', '1,049,035', '2,687,690', '405,228', '126,657', '1,080,760', '1,046,209', '333,322', '1,024,477', '178,306')\n",
+      "('65 and Older', '42,267,781', '670,310', '72,177', '1,063,270', '437,184', '3,327,513', '735,476', '535,272', '156,867', '29,545', '3,390,104', '1,071,439', '76,874', '287,514', '1,575,667', '988,868', '537,892', '434,800', '698,809', '524,304', '283,506', '633,762', '1,027,895', '1,530,131', '881,559', '339,155', '940,083', '199,291', '295,326', '358,691', '254,434', '1,104,082', '245,029', '2,364,410', '1,371,626', '118,103', '1,818,351', '523,331', '696,637', '2,143,953', '173,044', '729,307', '146,045', '995,089', '2,508,959', '348,772', '127,763', '1,036,254', '1,041,436', '348,771', '974,253', '220,265')\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_census = engine.execute(\"SELECT * FROM census_ages\")\n",
+    "\n",
+    "for record in data_census:\n",
+    "    print(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "5af32bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "602a9296",
+   "id": "e24dce2a",
    "metadata": {},
    "outputs": [],
    "source": []
