--- a/Cleaned_Data_OPTN_Census.ipynb
+++ b/Cleaned_Data_OPTN_Census.ipynb
@@ -649,7 +649,7 @@
     "washington_df.to_sql('washington', conn, if_exists='replace', index=False)\n",
     "west_virginia_df.to_sql('west_virginia', conn, if_exists='replace', index=False)\n",
     "wisconsin_df.to_sql('wisconsin', conn, if_exists='replace', index=False)\n",
-    "wyoming_df.to_sql('wyoming_df', conn, if_exists='replace', index=False)"
+    "wyoming_df.to_sql('wyoming', conn, if_exists='replace', index=False)"
    ]
   },
   {
